<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basePost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".fragment.PostFragment">

    <RelativeLayout
        android:id="@+id/layoutTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/color_gray_90">

        <RelativeLayout
            android:id="@+id/layoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <RelativeLayout
                android:id="@+id/back"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:paddingVertical="2dp">
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="20.5dp"
                    android:src="@drawable/ic_back"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/back"/>
            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/comments"
                android:theme="@style/TextViewTitleStyle"
                />
        </RelativeLayout>

        <SearchView
            android:id="@+id/svSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutTitle"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/background_search"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/searchComments"
            android:focusedByDefault="false"
            android:searchHintIcon="@color/color_text_search"
            android:submitBackground="@android:color/transparent"
            android:theme="@style/SearchViewTheme"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutTopBar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvComments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_comment"/>
    </RelativeLayout>

</RelativeLayout>